update to version 7.0.0