@@ -4,6 +4,7 @@ import java.io.File;
 import java.io.IOException;
 import java.lang.reflect.Field;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLClassLoader;
@@ -29,69 +30,85 @@ import java.util.jar.Manifest;
 
 import de.hechler.patrick.zeugs.check.anotations.CheckClass;
 import de.hechler.patrick.zeugs.check.interfaces.TriConsumer;
-import de.hechler.patrick.zeugs.check.interfaces.TwoValues;
+import de.hechler.patrick.zeugs.check.interfaces.TwoVals;
 
 /**
  * the {@link BigChecker} is used to check multiple classes.<br>
- * to generate a {@link BigChecker} the {@code generateBigChecker(...)} methods can be used. <br>
+ * to generate a {@link BigChecker} the {@code generateBigChecker(...)} methods
+ * can be used. <br>
  * the two constructors also can be used to create {@link BigChecker} instances.
  * <p>
- * to run multiple checks without caring about the {@link BigChecker} object, the {@code checkAll(...)} methods are recommended.
+ * to run multiple checks without caring about the {@link BigChecker} object,
+ * the {@code checkAll(...)} methods are recommended.
  * <p>
- * with the {@code tryGenerateBigChecker(...)} it is possible to read the checked classes from packages.<br>
- * with the {@code tryCheckAll(...)} it is possible to check checked classes read from packages.<br>
- * because of the java {@link ClassLoader} nature the {@code try...} methods can not guarantee to succeed.<br>
- * the {@code try...} methods try to find the source of the class loader and all its parents.<br>
- * then the {@code try...} methods try to search in the sources from the class loaders.
+ * with the {@code tryGenerateBigChecker(...)} it is possible to read the
+ * checked classes from packages.<br>
+ * with the {@code tryCheckAll(...)} it is possible to check checked classes
+ * read from packages.<br>
+ * because of the java {@link ClassLoader} nature the {@code try...} methods can
+ * not guarantee to succeed.<br>
+ * the {@code try...} methods try to find the source of the class loader and all
+ * its parents.<br>
+ * then the {@code try...} methods try to search in the sources from the class
+ * loaders.
  * <p>
- * even if it is possible to subclass this class it can not affect the check process, because all non {@code private} methods are marked either as {@code static} or {@code final} (and {@code public}).
+ * even if it is possible to subclass this class it can not affect the check
+ * process, because all non {@code private} methods are marked either as
+ * {@code static} or {@code final} (and {@code public}).
  * 
  * @author Patrick
  */
-public class BigChecker implements Runnable, Supplier <BigCheckResult>, TriConsumer <TwoValues <Class <?>, Checker>, Map <String, Class <?>>, Map <Class <?>, CheckResult>> {
+public class BigChecker
+		implements Runnable, Supplier<BigCheckResult>, TriConsumer<TwoVals<Class<?>, Checker>, Map<String, Class<?>>, Map<Class<?>, CheckResult>> {
 	
 	/**
-	 * the {@link Iterator} wich supplies this {@link BigChecker} with the classes and checkers wich should be checked.
+	 * the {@link Iterator} wich supplies this {@link BigChecker} with the classes
+	 * and checkers wich should be checked.
 	 */
-	private final Iterator <TwoValues <Class <?>, Checker>> checkers;
+	private final Iterator<TwoVals<Class<?>, Checker>> checkers;
 	/**
-	 * the maximum amount of checker threads wich should be created or {@code -1} for infinity.<br>
-	 * when set to {@code 0} no checker threads will be created and all checks will be executed in the same thread.
+	 * the maximum amount of checker threads wich should be created or {@code -1}
+	 * for infinity.<br>
+	 * when set to {@code 0} no checker threads will be created and all checks will
+	 * be executed in the same thread.
 	 */
-	private volatile int                                    maxCheckers;
+	private volatile int                               maxCheckers;
 	/**
 	 * the current number of checker threads.
 	 */
-	private volatile int                                    currentCheckers;
+	private volatile int                               currentCheckers;
 	/**
 	 * the result of this {@link BigChecker}
 	 */
-	private BigCheckResult                                  result;
+	private BigCheckResult                             result;
 	
 	/**
 	 * creates a new {@link BigChecker} from the given {@link Iterator}.<br>
-	 * this constructor uses the current number of available Processors for the JVM ({@link Runtime#availableProcessors()}) as its {@link #maxCheckers}.
+	 * this constructor uses the current number of available Processors for the JVM
+	 * ({@link Runtime#availableProcessors()}) as its {@link #maxCheckers}.
 	 * 
 	 * @param checkers
-	 *            the {@link Iterator} wich supplies this big checker with it's classes and checkers
+	 *                 the {@link Iterator} wich supplies this big checker with it's
+	 *                 classes and checkers
 	 */
-	public BigChecker(Iterator <TwoValues <Class <?>, Checker>> checkers) {
-		this(checkers, Runtime.getRuntime().availableProcessors());
-	}
+	public BigChecker(Iterator<TwoVals<Class<?>, Checker>> checkers) { this(checkers, Runtime.getRuntime().availableProcessors()); }
 	
 	/**
-	 * creates a new {@link BigChecker} from the given {@link Iterator} and the given {@code macCheckers}.
+	 * creates a new {@link BigChecker} from the given {@link Iterator} and the
+	 * given {@code macCheckers}.
 	 * 
 	 * @param checkers
-	 *            the {@link Iterator} wich supplies this big checker with it's classes and checkers
+	 *                    the {@link Iterator} wich supplies this big checker with
+	 *                    it's classes and checkers
 	 * @param maxCheckers
-	 *            the maximum number of threads which should be created for the checker threads or {@code -1} for infinity
+	 *                    the maximum number of threads which should be created for
+	 *                    the checker threads or {@code -1} for infinity
 	 */
-	public BigChecker(Iterator <TwoValues <Class <?>, Checker>> checkers, int maxCheckers) {
-		this.checkers = checkers;
-		this.maxCheckers = maxCheckers < -1 ? 0 : maxCheckers;
+	public BigChecker(Iterator<TwoVals<Class<?>, Checker>> checkers, int maxCheckers) {
+		this.checkers        = checkers;
+		this.maxCheckers     = maxCheckers < -1 ? 0 : maxCheckers;
 		this.currentCheckers = 0;
-		this.result = null;
+		this.result          = null;
 	}
 	
 	
@@ -100,91 +117,88 @@ public class BigChecker implements Runnable, Supplier <BigCheckResult>, TriConsu
 	 * 
 	 * @return the current maximal number of checker threads
 	 */
-	public final int getMaxCheckers() {
-		return maxCheckers;
-	}
+	public final int getMaxCheckers() { return maxCheckers; }
 	
 	/**
 	 * sets the maximal value of checker threads
 	 * 
 	 * @param maxCheckers
-	 *            the new maximal value of checker threads
+	 *                    the new maximal value of checker threads
+	 * 					
 	 * @throws IllegalArgumentException
-	 *             if {@code maxCheckers} is smaller than {@code -1}
+	 *                                  if {@code maxCheckers} is smaller than
+	 *                                  {@code -1}
 	 */
 	public final void setMaxCheckers(int maxCheckers) throws IllegalArgumentException {
-		if (maxCheckers < -1) {
-			throw new IllegalArgumentException("max workers can eiter be -1, 0 or any other value greather than zero");
-		}
+		if (maxCheckers < -1) { throw new IllegalArgumentException("max workers can eiter be -1, 0 or any other value greather than zero"); }
 		this.maxCheckers = maxCheckers;
 	}
 	
 	/**
-	 * returns <code>true</code> if this {@link BigChecker} has already been executed
+	 * returns <code>true</code> if this {@link BigChecker} has already been
+	 * executed
 	 * 
-	 * @return <code>true</code> if this {@link BigChecker} has already been executed
+	 * @return <code>true</code> if this {@link BigChecker} has already been
+	 *         executed
 	 */
-	public final boolean checkedAlready() {
-		return this.result != null;
-	}
+	public final boolean checkedAlready() { return this.result != null; }
 	
 	/**
 	 * returns the {@link BigCheckResult} of this {@link BigChecker}.<br>
-	 * if the {@link #result} has not yet been generated the {@link #run()} method is called
+	 * if the {@link #result} has not yet been generated the {@link #run()} method
+	 * is called
 	 */
 	@Override
 	public final BigCheckResult get() {
-		if (this.result == null) {
-			run();
-		}
+		if (this.result == null) { run(); }
 		return this.result;
 	}
 	
 	/**
 	 * generates the {@link #result} of this {@link BigChecker}.
 	 * <p>
-	 * unlike the {@link Checker}, this method will directly return without doing anything, when the {@link #result} has already been generated.
+	 * unlike the {@link Checker}, this method will directly return without doing
+	 * anything, when the {@link #result} has already been generated.
 	 * <p>
 	 * this method will return after all class checks has been executed.
 	 */
 	@Override
 	public final void run() {
 		synchronized (this.checkers) {
-			if (this.result != null) {
-				return;
-			}
+			if (this.result != null) { return; }
 			long start = System.currentTimeMillis();
-			if ( !this.checkers.hasNext()) {
+			if (!this.checkers.hasNext()) {
 				this.result = new BigCheckResult(Collections.emptyMap(), Collections.emptyMap(), start, System.currentTimeMillis());
 				return;
 			}
-			List <TwoValues <Class <?>, Checker>> singleThreadClasses = new ArrayList <>();
-			Map <String, Class <?>> classes = new HashMap <>();
-			Map <Class <?>, CheckResult> results = new HashMap <>();
-			TwoValues <Class <?>, Checker> old = null;
-			boolean retry = false;
+			List<TwoVals<Class<?>, Checker>> singleThreadClasses = new ArrayList<>();
+			Map<String, Class<?>>            classes             = new HashMap<>();
+			Map<Class<?>, CheckResult>       results             = new HashMap<>();
+			TwoVals<Class<?>, Checker>       old                 = null;
+			boolean                          retry               = false;
 			while (retry || this.checkers.hasNext()) {
-				TwoValues <Class <?>, Checker> next = retry ? old : this.checkers.next();
+				TwoVals<Class<?>, Checker> next = retry ? old : this.checkers.next();
+				if (next == null) { throw new NullPointerException("the iterator suppliead a null element"); }
 				retry = false;
-				CheckClass checkClass = next.getValueA().getAnnotation(CheckClass.class);
+				CheckClass checkClass = next.valA().getAnnotation(CheckClass.class);
 				if (checkClass == null || checkClass.singleThread()) {
 					singleThreadClasses.add(next);
 					continue;
 				}
 				if (this.maxCheckers == -1 || this.currentCheckers < this.maxCheckers) {
 					synchronized (this) {
-						this.currentCheckers ++ ;
+						this.currentCheckers++;
 					}
 					new Thread(() -> {
 						try {
 							accept(next, classes, results);
 						} finally {
 							synchronized (this) {
-								this.currentCheckers -- ;
+								this.currentCheckers--;
 								notifyAll();
 							}
 						}
-					}, "Checker : " + next.getValueA().getName()).start();
+					}, "Checker : " + next.valA().getName()).start();
 				} else if (this.maxCheckers == 0) {
 					accept(next, classes, results);
 				} else {
@@ -203,9 +217,7 @@ public class BigChecker implements Runnable, Supplier <BigCheckResult>, TriConsu
 			while (this.currentCheckers > 0) {
 				try {
 					synchronized (this) {
-						if (this.currentCheckers == 0) {
-							break;
-						}
+						if (this.currentCheckers == 0) { break; }
 						wait(10000L);
 					}
 				} catch (InterruptedException e) {
@@ -223,228 +235,296 @@ public class BigChecker implements Runnable, Supplier <BigCheckResult>, TriConsu
 	 * adds the {@code twoVals} to the {@code classes} and the {@code results} maps.
 	 * 
 	 * @param twoVals
-	 *            the checked class and the result of the class check
+	 *                the checked class and the result of the class check
 	 * @param classes
-	 *            the map containing the checked classes refereed by their names
+	 *                the map containing the checked classes refereed by their names
 	 * @param results
-	 *            the map containing the results of the executed class checks refereed by the classes
+	 *                the map containing the results of the executed class checks
+	 *                refereed by the classes
 	 */
 	@Override
-	public final void accept(TwoValues <Class <?>, Checker> twoVals, Map <String, Class <?>> classes, Map <Class <?>, CheckResult> results) {
-		Class <?> cls = twoVals.getValueA();
-		Checker checker = twoVals.getValueB();
-		CheckResult res = checker.get();
+	public final void accept(TwoVals<Class<?>, Checker> twoVals, Map<String, Class<?>> classes, Map<Class<?>, CheckResult> results) {
+		Class<?>    cls     = twoVals.valA();
+		Checker     checker = twoVals.valB();
+		CheckResult res     = checker.get();
 		synchronized (this) {
 			BigCheckResult.put(classes, results, cls, res);
 		}
 	}
 	
 	/**
-	 * works like {@link #checkAll(boolean, Class...)}, but instead of an class array this class uses the full class names and the given {@link ClassLoader} to get the classes which should be checked.
+	 * works like {@link #checkAll(boolean, Class...)}, but instead of an class
+	 * array this class uses the full class names and the given {@link ClassLoader}
+	 * to get the classes which should be checked.
 	 * 
 	 * @param needEnabedCheckClass
-	 *            if only classes annotated with {@link CheckClass} should be checked
+	 *                             if only classes annotated with {@link CheckClass}
+	 *                             should be checked
 	 * @param classLoader
-	 *            the loader used to load classes
+	 *                             the loader used to load classes
 	 * @param fullClassNames
-	 *            an array containing all full class names from the classes which should be checked
+	 *                             an array containing all full class names from the
+	 *                             classes which should be checked
+	 * 							
 	 * @return the result of all checks
 	 */
 	public static BigCheckResult checkAll(boolean needEnabedCheckClass, ClassLoader classLoader, String... fullClassNames) {
-		Iterator <Class <?>> classIter = new ConvertingArrayIterator <String, Class <?>>(fullClassNames, str -> {
+		Iterator<Class<?>> classIter = new ConvertingArrayIterator<>(fullClassNames, str -> {
 			try {
 				return Class.forName(str, false, classLoader);
 			} catch (ClassNotFoundException e) {
-				throw new RuntimeException(e);
+				throw new NoClassDefFoundError(e.toString());
 			}
 		});
-		Iterator <TwoValues <Class <?>, Checker>> tvIter = new CheckerIterator(classIter);
+		
+		Iterator<TwoVals<Class<?>, Checker>> tvIter;
+		if (needEnabedCheckClass) {
+			tvIter = new CheckerIterator(classIter);
+		} else {
+			tvIter = new ConvertingFilterIteratorImpl<>(classIter, c -> true, CheckerIterator.CONVERT);
+		}
 		BigChecker bigChecker = new BigChecker(tvIter);
 		return bigChecker.get();
 	}
 	
 	/**
-	 * works like {@link #checkAll(boolean, ClassLoader, String...)}, but uses to load classes the class loader of the {@link BigChecker} class.
+	 * works like {@link #checkAll(boolean, ClassLoader, String...)}, but uses to
+	 * load classes the class loader of the {@link BigChecker} class.
 	 * 
 	 * @param needEnabedCheckClass
-	 *            if only classes annotated with {@link CheckClass} should be checked
-	 * @param classes
-	 *            the array containing all classes which should be checked
+	 *                             if only classes annotated with {@link CheckClass}
+	 *                             should be checked
+	 * @param fullClassNames
+	 *                             the array containing the full class names of the
+	 *                             classes which should be checked
+	 * 							
 	 * @return the result of all checks
+	 * 							
 	 * @see #checkAll(boolean, Iterator)
 	 */
 	public static BigCheckResult checkAll(boolean needEnabedCheckClass, String... fullClassNames) {
 		ClassLoader classLoader = BigChecker.class.getClassLoader();
-		Iterator <Class <?>> classIter = new ConvertingArrayIterator <String, Class <?>>(fullClassNames, str -> {
+		
+		Iterator<Class<?>> classIter = new ConvertingArrayIterator<>(fullClassNames, str -> {
 			try {
 				return Class.forName(str, false, classLoader);
 			} catch (ClassNotFoundException e) {
-				throw new RuntimeException(e);
+				throw new NoClassDefFoundError(e.toString());
 			}
 		});
-		Iterator <TwoValues <Class <?>, Checker>> tvIter = new CheckerIterator(classIter);
+		
+		Iterator<TwoVals<Class<?>, Checker>> tvIter;
+		if (needEnabedCheckClass) {
+			tvIter = new CheckerIterator(classIter);
+		} else {
+			tvIter = new ConvertingFilterIteratorImpl<>(classIter, c -> true, CheckerIterator.CONVERT);
+		}
 		BigChecker bigChecker = new BigChecker(tvIter);
 		return bigChecker.get();
 	}
 	
 	/**
-	 * works like {@link #checkAll(boolean, Iterator)}, but uses instead of an {@link Iterator} an {@link Class} array.
+	 * works like {@link #checkAll(boolean, Iterator)}, but uses instead of an
+	 * {@link Iterator} an {@link Class} array.
 	 * 
 	 * @param needEnabedCheckClass
-	 *            if only classes annotated with {@link CheckClass} should be checked
+	 *                             if only classes annotated with {@link CheckClass}
+	 *                             should be checked
 	 * @param classes
-	 *            the array containing all classes which should be checked
+	 *                             the array containing all classes which should be
+	 *                             checked
+	 * 
 	 * @return the result of all checks
+	 * 
 	 * @see #checkAll(boolean, Iterator)
 	 */
-	public static BigCheckResult checkAll(boolean needEnabedCheckClass, Class <?>... classes) {
-		Iterator <TwoValues <Class <?>, Checker>> tvIter = new ConvertingArrayIterator <>(classes, cls -> new TwoValuesImpl <>(cls, Checker.generateChecker(cls)));
+	public static BigCheckResult checkAll(boolean needEnabedCheckClass, Class<?>... classes) {
+		Iterator<TwoVals<Class<?>, Checker>> tvIter;
+		if (needEnabedCheckClass) {
+			tvIter = new CheckerIterator(new ArrayIterator<>(classes));
+		} else {
+			tvIter = new ConvertingArrayIterator<>(classes, cls -> new TwoValues<>(cls, Checker.generateChecker(cls)));
+		}
 		BigChecker bigChecker = new BigChecker(tvIter);
 		return bigChecker.get();
 	}
 	
 	/**
 	 * checks all classes from the iterator.<br>
-	 * if {@code needEnabledCheckClass} is <code>true</code> only classes which are annotated with {@link CheckClass} and are not {@link CheckClass#disabled()} are checked.
+	 * if {@code needEnabledCheckClass} is <code>true</code> only classes which are
+	 * annotated with {@link CheckClass} and are not {@link CheckClass#disabled()}
+	 * are checked.
 	 * 
 	 * @param needEnabedCheckClass
-	 *            if only classes annotated with {@link CheckClass} should be checked
+	 *                             if only classes annotated with {@link CheckClass}
+	 *                             should be checked
 	 * @param iter
-	 *            the {@link Iterator} which iterates over all {@link Class} objects to check
+	 *                             the {@link Iterator} which iterates over all
+	 *                             {@link Class} objects to check
+	 * 							
 	 * @return the result of all executed checks
 	 */
-	public static BigCheckResult checkAll(boolean needEnabedCheckClass, Iterator <Class <?>> iter) {
-		Iterator <TwoValues <Class <?>, Checker>> tvIter = new CheckerIterator(iter);
+	public static BigCheckResult checkAll(boolean needEnabedCheckClass, Iterator<Class<?>> iter) {
+		Iterator<TwoVals<Class<?>, Checker>> tvIter;
+		if (needEnabedCheckClass) {
+			tvIter = new CheckerIterator(iter);
+		} else {
+			tvIter = new ConvertingFilterIteratorImpl<>(iter, c -> true, CheckerIterator.CONVERT);
+		}
 		BigChecker bigChecker = new BigChecker(tvIter);
 		return bigChecker.get();
 	}
 	
 	/**
-	 * this will generate a {@link BigChecker} ready to check the given {@code classes}.
+	 * this will generate a {@link BigChecker} ready to check the given
+	 * {@code classes}.
 	 * <p>
-	 * if {@code needCheckClass} is <code>true</code> only classes annotated with {@link CheckClass} will be given to the {@link BigChecker}.<br>
-	 * if {@code needCheckClass} is <code>false</code> all classes in the array will be given to the {@link BigChecker}.
+	 * if {@code needCheckClass} is <code>true</code> only classes annotated with
+	 * {@link CheckClass} will be given to the {@link BigChecker}.<br>
+	 * if {@code needCheckClass} is <code>false</code> all classes in the array will
+	 * be given to the {@link BigChecker}.
 	 * 
 	 * @param needCheckClass
-	 *            if the given classes need to be annotated with {@link CheckClass} and not be {@link CheckClass#disabled()}.
+	 *                       if the given classes need to be annotated with
+	 *                       {@link CheckClass} and not be
+	 *                       {@link CheckClass#disabled()}.
 	 * @param classes
-	 *            the array containing the classes to check
+	 *                       the array containing the classes to check
+	 * 						
 	 * @return the generated {@link BigChecker}
 	 */
-	public static BigChecker generateBigChecker(boolean needCheckClass, Class <?>... classes) {
-		Iterator <TwoValues <Class <?>, Checker>> iter = generateIterator(needCheckClass, classes);
+	public static BigChecker generateBigChecker(boolean needCheckClass, Class<?>... classes) {
+		Iterator<TwoVals<Class<?>, Checker>> iter = generateIterator(needCheckClass, classes);
 		return new BigChecker(iter);
 	}
 	
 	/**
-	 * this will generate a {@link BigChecker} ready to check the given {@code classes}.
+	 * this will generate a {@link BigChecker} ready to check the given
+	 * {@code classes}.
 	 * <p>
-	 * if {@code needCheckClass} is <code>true</code> only classes annotated with {@link CheckClass} will be given to the {@link BigChecker}.<br>
-	 * if {@code needCheckClass} is <code>false</code> all classes in the array will be given to the {@link BigChecker}.
+	 * if {@code needCheckClass} is <code>true</code> only classes annotated with
+	 * {@link CheckClass} will be given to the {@link BigChecker}.<br>
+	 * if {@code needCheckClass} is <code>false</code> all classes in the array will
+	 * be given to the {@link BigChecker}.
 	 * <p>
-	 * {@code maxWorkers} defines how much threads should be started for the checkers to execute the checks.<br>
-	 * every checker will run in a own thread and not in multiple threads, so no checker has to care for the Multithreading.<br>
-	 * if {@code maxWorters} is {@code 0} no threads will be created and all checks are executed in the calling threads of the {@link BigChecker#run()}.<br>
-	 * if {@code maxWorters} is {@code -1} the maximum amount of workers will be infinity.<br>
-	 * if {@code maxWorkers} is a negative value smaller than {@code -1} an {@link IllegalArgumentException} will be thrown.
+	 * {@code maxWorkers} defines how much threads should be started for the
+	 * checkers to execute the checks.<br>
+	 * every checker will run in a own thread and not in multiple threads, so no
+	 * checker has to care for the Multithreading.<br>
+	 * if {@code maxWorters} is {@code 0} no threads will be created and all checks
+	 * are executed in the calling threads of the {@link BigChecker#run()}.<br>
+	 * if {@code maxWorters} is {@code -1} the maximum amount of workers will be
+	 * infinity.<br>
+	 * if {@code maxWorkers} is a negative value smaller than {@code -1} an
+	 * {@link IllegalArgumentException} will be thrown.
 	 * 
 	 * @param needCheckClass
-	 *            if the given classes need to be annotated with {@link CheckClass} and not be {@link CheckClass#disabled()}.
+	 *                       if the given classes need to be annotated with
+	 *                       {@link CheckClass} and not be
+	 *                       {@link CheckClass#disabled()}.
 	 * @param maxWorkers
-	 *            the maximum amount of worker running threads, {@code -1} for infinity or {@code 0} when all checks should be executed in the same thread.
+	 *                       the maximum amount of worker running threads,
+	 *                       {@code -1} for infinity or {@code 0} when all checks
+	 *                       should be executed in the same thread.
 	 * @param classes
-	 *            the array containing the classes to check
+	 *                       the array containing the classes to check
+	 * 						
 	 * @return the generated {@link BigChecker}
 	 */
-	public static BigChecker generateBigChecker(boolean needCheckClass, int maxWorkers, Class <?>... classes) {
-		if (maxWorkers < -1) {
-			throw new IllegalArgumentException("max workers < -1 maxWorkers=" + maxWorkers);
-		}
-		Iterator <TwoValues <Class <?>, Checker>> iter = generateIterator(needCheckClass, classes);
+	public static BigChecker generateBigChecker(boolean needCheckClass, int maxWorkers, Class<?>... classes) {
+		if (maxWorkers < -1) { throw new IllegalArgumentException("max workers < -1 maxWorkers=" + maxWorkers); }
+		Iterator<TwoVals<Class<?>, Checker>> iter = generateIterator(needCheckClass, classes);
 		return new BigChecker(iter, maxWorkers);
 	}
 	
 	/**
-	 * this will generate a {@link BigChecker} ready to check the given {@code classes}.
+	 * this will generate a {@link BigChecker} ready to check the given
+	 * {@code classes}.
 	 * <p>
-	 * if {@code needCheckClass} is <code>true</code> only classes annotated with {@link CheckClass} will be given to the {@link BigChecker}.<br>
-	 * if {@code needCheckClass} is <code>false</code> all classes in the array will be given to the {@link BigChecker}.
+	 * if {@code needCheckClass} is <code>true</code> only classes annotated with
+	 * {@link CheckClass} will be given to the {@link BigChecker}.<br>
+	 * if {@code needCheckClass} is <code>false</code> all classes in the array will
+	 * be given to the {@link BigChecker}.
 	 * 
 	 * @param needCheckClass
-	 *            if the given classes need to be annotated with {@link CheckClass} and not be {@link CheckClass#disabled()}.
+	 *                       if the given classes need to be annotated with
+	 *                       {@link CheckClass} and not be
+	 *                       {@link CheckClass#disabled()}.
 	 * @param classes
-	 *            the iterator containing the classes to check
+	 *                       the iterator containing the classes to check
+	 * 						
 	 * @return the generated {@link BigChecker}
 	 */
-	public static BigChecker generateBigChecker(boolean needCheckClass, Iterator <Class <?>> classes) {
-		Iterator <TwoValues <Class <?>, Checker>> iter = getIterator(needCheckClass, classes);
+	public static BigChecker generateBigChecker(boolean needCheckClass, Iterator<Class<?>> classes) {
+		Iterator<TwoVals<Class<?>, Checker>> iter = getIterator(needCheckClass, classes);
 		return new BigChecker(iter);
 	}
 	
 	/**
-	 * this will generate a {@link BigChecker} ready to check the given {@code classes}.
+	 * this will generate a {@link BigChecker} ready to check the given
+	 * {@code classes}.
 	 * <p>
-	 * if {@code needCheckClass} is <code>true</code> only classes annotated with {@link CheckClass} will be given to the {@link BigChecker}.<br>
-	 * if {@code needCheckClass} is <code>false</code> all classes in the array will be given to the {@link BigChecker}.
+	 * if {@code needCheckClass} is <code>true</code> only classes annotated with
+	 * {@link CheckClass} will be given to the {@link BigChecker}.<br>
+	 * if {@code needCheckClass} is <code>false</code> all classes in the array will
+	 * be given to the {@link BigChecker}.
 	 * <p>
-	 * {@code maxWorkers} defines how much threads should be started for the checkers to execute the checks.<br>
-	 * every checker will run in a own thread and not in multiple threads, so no checker has to care for the Multithreading.<br>
-	 * if {@code maxWorters} is {@code 0} no threads will be created and all checks are executed in the calling threads of the {@link BigChecker#run()}.<br>
-	 * if {@code maxWorters} is {@code -1} the maximum amount of workers will be infinity.<br>
-	 * if {@code maxWorkers} is a negative value smaller than {@code -1} an {@link IllegalArgumentException} will be thrown.
+	 * {@code maxWorkers} defines how much threads should be started for the
+	 * checkers to execute the checks.<br>
+	 * every checker will run in a own thread and not in multiple threads, so no
+	 * checker has to care for the Multithreading.<br>
+	 * if {@code maxWorters} is {@code 0} no threads will be created and all checks
+	 * are executed in the calling threads of the {@link BigChecker#run()}.<br>
+	 * if {@code maxWorters} is {@code -1} the maximum amount of workers will be
+	 * infinity.<br>
+	 * if {@code maxWorkers} is a negative value smaller than {@code -1} an
+	 * {@link IllegalArgumentException} will be thrown.
 	 * 
 	 * @param needCheckClass
-	 *            if the given classes need to be annotated with {@link CheckClass} and not be {@link CheckClass#disabled()}.
+	 *                       if the given classes need to be annotated with
+	 *                       {@link CheckClass} and not be
+	 *                       {@link CheckClass#disabled()}.
 	 * @param maxWorkers
-	 *            the maximum amount of worker running threads, {@code -1} for infinity or {@code 0} when all checks should be executed in the same thread.
+	 *                       the maximum amount of worker running threads,
+	 *                       {@code -1} for infinity or {@code 0} when all checks
+	 *                       should be executed in the same thread.
 	 * @param classes
-	 *            the iterator containing the classes to check
+	 *                       the iterator containing the classes to check
+	 * 						
 	 * @return the generated {@link BigChecker}
 	 */
-	public static BigChecker generateBigChecker(boolean needCheckClass, int maxWorkers, Iterator <Class <?>> classes) {
-		Iterator <TwoValues <Class <?>, Checker>> iter = getIterator(needCheckClass, classes);
+	public static BigChecker generateBigChecker(boolean needCheckClass, int maxWorkers, Iterator<Class<?>> classes) {
+		Iterator<TwoVals<Class<?>, Checker>> iter = getIterator(needCheckClass, classes);
 		return new BigChecker(iter, maxWorkers);
 	}
 	
-	private static Iterator <TwoValues <Class <?>, Checker>> generateIterator(boolean needCheckClass, Class <?>... classes) {
+	private static Iterator<TwoVals<Class<?>, Checker>> generateIterator(boolean needCheckClass, Class<?>... classes) {
 		if (needCheckClass) {
-			return new CheckerIterator(new ArrayIterator <>(classes));
+			return new CheckerIterator(new ArrayIterator<>(classes));
 		} else {
-			return new ConvertingArrayIterator <>(classes, cls -> new TwoValuesImpl <>(cls, Checker.generateChecker(cls)));
+			return new ConvertingArrayIterator<>(classes, cls -> new TwoValues<>(cls, Checker.generateChecker(cls)));
 		}
 	}
 	
-	private static Iterator <TwoValues <Class <?>, Checker>> getIterator(boolean needCheckClass, Iterator <Class <?>> classes) {
+	private static Iterator<TwoVals<Class<?>, Checker>> getIterator(boolean needCheckClass, Iterator<Class<?>> classes) {
 		if (needCheckClass) {
 			return new CheckerIterator(classes);
 		} else {
-			return new Iterator <TwoValues <Class <?>, Checker>>() {
-				
-				@Override
-				public boolean hasNext() {
-					return classes.hasNext();
-				}
-				
-				@Override
-				public TwoValues <Class <?>, Checker> next() {
-					Class <?> cls = classes.next();
-					Checker checker = Checker.generateChecker(cls);
-					return new TwoValuesImpl <Class <?>, Checker>(cls, checker);
-				}
-				
-			};
+			return new ConvertingFilterIteratorImpl<>(classes, c -> true, c -> new TwoValues<>(c, Checker.generateChecker(c)));
 		}
 	}
 	
 	/**
-	 * like {@link #tryCheckAll(boolean, String, ClassLoader)} with {@code tryCheckAll(subPackages, package.getName(), loader)}.
+	 * like {@link #tryCheckAll(boolean, String, ClassLoader)} with
+	 * {@code tryCheckAll(subPackages, package.getName(), loader)}.
 	 * 
-	 * @param subPackages
-	 *            <code>true</code> if also classes in subPackages should be loaded
-	 * @param pakage
-	 *            the package in which the classes should be searched
-	 * @param loader
-	 *            the loader used to find/load classes
+	 * @param subPackages <code>true</code> if also classes in subPackages should be
+	 *                    loaded
+	 * @param pakage      the package in which the classes should be searched
+	 * @param loader      the loader used to find/load classes
+	 * 
+	 * @return the result of the executed check
+	 * 
 	 * @see #tryCheckAll(boolean, String, ClassLoader)
 	 */
 	public static BigCheckResult tryCheckAll(boolean subPackages, Package pakage, ClassLoader loader) {
@@ -452,29 +532,35 @@ public class BigChecker implements Runnable, Supplier <BigCheckResult>, TriConsu
 	}
 	
 	/**
-	 * like <code>{@link #tryGenerateBigChecker(boolean, String, ClassLoader)}.{@link #get()}</code>.
+	 * like
+	 * <code>{@link #tryGenerateBigChecker(boolean, String, ClassLoader)}.{@link #get()}</code>.
 	 * 
-	 * @param subPackages
-	 *            <code>true</code> if also classes in subPackages should be loaded
-	 * @param pakage
-	 *            the name of the package (like {@link Package#getName()}) in which the classes should be searched
-	 * @param loader
-	 *            the loader used to find/load classes
+	 * @param subPackages <code>true</code> if also classes in subPackages should be
+	 *                    loaded
+	 * @param pakage      the name of the package (like {@link Package#getName()})
+	 *                    in which the classes should be searched
+	 * @param loader      the loader used to find/load classes
+	 * 					
+	 * @return the result of the executed check
+	 * 					
 	 * @see #tryCheckAll(boolean, String, ClassLoader)
 	 */
 	public static BigCheckResult tryCheckAll(boolean subPackages, String pakage, ClassLoader loader) {
-		return tryGenerateBigChecker(subPackages, pakage, loader, false).get();
+		return tryGenerateBigChecker(subPackages, pakage, loader).get();
 	}
 	
 	/**
-	 * like {@link #tryGenerateBigChecker(boolean, String, ClassLoader, boolean)} with {@code tryGetClassesForPackage(subPackages, package.getName(), loader, true)}.
+	 * like {@link #tryGenerateBigChecker(boolean, String, ClassLoader, boolean)}
+	 * with
+	 * {@code tryGetClassesForPackage(subPackages, package.getName(), loader, false)}.
 	 * 
-	 * @param subPackages
-	 *            <code>true</code> if also classes in subPackages should be loaded
-	 * @param pakage
-	 *            the package in which the classes should be searched
-	 * @param loader
-	 *            the loader used to find/load classes
+	 * @param subPackages <code>true</code> if also classes in subPackages should be
+	 *                    loaded
+	 * @param pakage      the package in which the classes should be searched
+	 * @param loader      the loader used to find/load classes
+	 * 
+	 * @return the generated {@link BigChecker}
+	 * 
 	 * @see #tryGenerateBigChecker(boolean, String, ClassLoader, boolean)
 	 */
 	public static BigChecker tryGenerateBigChecker(boolean subPackages, Package pakage, ClassLoader loader) {
@@ -482,14 +568,17 @@ public class BigChecker implements Runnable, Supplier <BigCheckResult>, TriConsu
 	}
 	
 	/**
-	 * like {@link #tryGenerateBigChecker(String, boolean, ClassLoader, boolean)} with {@code tryGetClassesForPackage(subPackages, package, loader, true)}.
+	 * like {@link #tryGenerateBigChecker(boolean, String, ClassLoader, boolean)}
+	 * with {@code tryGetClassesForPackage(subPackages, package, loader, false)}.
 	 * 
-	 * @param subPackages
-	 *            <code>true</code> if also classes in subPackages should be loaded
-	 * @param pakage
-	 *            the name of the package (like {@link Package#getName()}) in which the classes should be searched
-	 * @param loader
-	 *            the loader used to find/load classes
+	 * @param subPackages <code>true</code> if also classes in subPackages should be
+	 *                    loaded
+	 * @param pakage      the name of the package (like {@link Package#getName()})
+	 *                    in which the classes should be searched
+	 * @param loader      the loader used to find/load classes
+	 * 					
+	 * @return the generated {@link BigChecker}
+	 * 					
 	 * @see #tryGenerateBigChecker(boolean, String, ClassLoader, boolean)
 	 */
 	public static BigChecker tryGenerateBigChecker(boolean subPackages, String pakage, ClassLoader loader) {
@@ -498,77 +587,103 @@ public class BigChecker implements Runnable, Supplier <BigCheckResult>, TriConsu
 	
 	/**
 	 * tries to check all classes from the given package.<br>
-	 * if {@code subPackages} is <code>true</code> this method also tries to check the classes in supPackages.
+	 * if {@code subPackages} is <code>true</code> this method also tries to check
+	 * the classes in supPackages.
 	 * <p>
-	 * a class is in a package, when the {@link Class#forName(String, boolean, ClassLoader)} method finds the class, when the name starts with {@code pakage + "." + restName}.<br>
-	 * if {@code subPackages} is <code>false</code> {@code restName} is not allowed to contain a {@code '.'}.
+	 * a class is in a package, when the
+	 * {@link Class#forName(String, boolean, ClassLoader)} method finds the class,
+	 * when the name starts with {@code pakage + "." + restName}.<br>
+	 * if {@code subPackages} is <code>false</code> {@code restName} is not allowed
+	 * to contain a {@code '.'}.
 	 * <p>
-	 * if {@code bailError} is <code>true</code>, errors on loading/finding the classes will be re-thrown.<br>
-	 * if {@code bailError} is <code>false</code>, errors on loading/finding the classes will be suppressed.
+	 * if {@code bailError} is <code>true</code>, errors on loading/finding the
+	 * classes will be re-thrown.<br>
+	 * if {@code bailError} is <code>false</code>, errors on loading/finding the
+	 * classes will be suppressed.
 	 * <p>
-	 * this method checks only classes wich are annotated with {@link CheckClass} and are not ({@link CheckClass#disabled()}).
+	 * this method checks only classes wich are annotated with {@link CheckClass}
+	 * and are not ({@link CheckClass#disabled()}).
 	 * <p>
-	 * this method can not guarantee to find any classes in the given package or any sub-package!
+	 * this method can not guarantee to find any classes in the given package or any
+	 * sub-package!
 	 * 
-	 * @param subPackages
-	 *            <code>true</code> if also classes in subPackages should be loaded
-	 * @param pakage
-	 *            the name of the package (like {@link Package#getName()})
-	 * @param loader
-	 *            the loader used to find/load classes
-	 * @param bailError
-	 *            if errors on loading/finding classes should be re-thrown (<code>true</code>) or suppressed (<code>false</code>)
+	 * @param subPackages <code>true</code> if also classes in subPackages should be
+	 *                    loaded
+	 * @param pakage      the name of the package (like {@link Package#getName()})
+	 * @param loader      the loader used to find/load classes
+	 * @param bailError   if errors on loading/finding classes should be re-thrown
+	 *                    (<code>true</code>) or suppressed (<code>false</code>)
+	 * 					
 	 * @return the result of all executed checks
 	 */
 	public static BigChecker tryGenerateBigChecker(boolean subPackages, String pakage, ClassLoader loader, boolean bailError) {
-		Set <Class <?>> classes = tryGetClassesForPackage(pakage, subPackages, loader, bailError);
-		CheckerIterator iter = new CheckerIterator(classes.iterator());
+		Set<Class<?>>                        classes = tryGetClassesForPackage(pakage, subPackages, loader, bailError);
+		Iterator<TwoVals<Class<?>, Checker>> iter    = new CheckerIterator(classes.iterator());
 		return new BigChecker(iter);
 	}
 	
 	/**
 	 * orig description:<br>
-	 * Scans all classloaders for the current thread for loaded jars, and then scans each jar for the package name in question, listing all classes directly under the package name in question. Assumes
-	 * directory structure in jar file and class package naming follow java conventions (i.e. com.example.test.MyTest would be in /com/example/test/MyTest.class)
+	 * Scans all classloaders for the current thread for loaded jars, and then scans
+	 * each jar for the package name in question, listing all classes directly under
+	 * the package name in question. Assumes
+	 * directory structure in jar file and class package naming follow java
+	 * conventions (i.e. com.example.test.MyTest would be in
+	 * /com/example/test/MyTest.class)
 	 * <p>
-	 * in addition this method also scans for directories, where also is assumed, that the classes are placed followed by the java conventions. (i.e. <code>com.example.test.MyTest</code> would be in
+	 * in addition this method also scans for directories, where also is assumed,
+	 * that the classes are placed followed by the java conventions. (i.e.
+	 * <code>com.example.test.MyTest</code> would be in
 	 * <code>directory/com/example/test/MyTest.class</code>)
 	 * <p>
-	 * this method also reads the jars Class-Path for other jars and directories. for the jars and directories referred in the jars are scanned with the same rules as defined here.<br>
+	 * this method also reads the jars Class-Path for other jars and directories.
+	 * for the jars and directories referred in the jars are scanned with the same
+	 * rules as defined here.<br>
 	 * it is ensured that no jar/directory is scanned exactly one time.
 	 * <p>
-	 * if {@code bailError} is <code>true</code> all errors will be wrapped in a {@link RuntimeException} and then thrown.<br>
-	 * a {@link RuntimeException} will also be thrown if something unexpected happens.<br>
+	 * if {@code bailError} is <code>true</code> all errors will be wrapped in a
+	 * {@link RuntimeException} and then thrown.<br>
+	 * a {@link RuntimeException} will also be thrown if something unexpected
+	 * happens.
+	 * <p>
+	 * <ul>
+	 * <li>https://stackoverflow.com/questions/1156552/java-package-introspection</li>
+	 * <li>https://stackoverflow.com/a/1157352/18252455</li>
+	 * <li>https://creativecommons.org/licenses/by-sa/2.5/</li>
+	 * <li>https://creativecommons.org/licenses/by-sa/2.5/legalcode</li>
+	 * </ul>
 	 * 
-	 * @param packageName
-	 *            the name of the package for which the classes should be searched
-	 * @param allowSubPackages
-	 *            <code>true</code> is also classes in sub packages should be found
-	 * @param loader
-	 *            the {@link ClassLoader} which should be used to find the URLs and to load classes
-	 * @param bailError
-	 *            if all {@link Exception} should be re-thrown wrapped in {@link RuntimeException} and if a {@link RuntimeException} should be thrown, when something is not as expected.
-	 * @see https://stackoverflow.com/questions/1156552/java-package-introspection
-	 * @see https://stackoverflow.com/a/1157352/18252455
-	 * @see https://creativecommons.org/licenses/by-sa/2.5/
-	 * @see https://creativecommons.org/licenses/by-sa/2.5/legalcode
+	 * @param packageName      the name of the package for which the classes should
+	 *                         be searched
+	 * @param allowSubPackages <code>true</code> is also classes in sub packages
+	 *                         should be found
+	 * @param loader           the {@link ClassLoader} which should be used to find
+	 *                         the URLs and to load classes
+	 * @param bailError        if all {@link Exception} should be re-thrown wrapped
+	 *                         in {@link RuntimeException} and if a
+	 *                         {@link RuntimeException} should be thrown, when
+	 *                         something is not as expected.
+	 * 						
+	 * @return a {@link Set} which contains the {@link Class} values which could be
+	 *         found
 	 */
-	public static Set <Class <?>> tryGetClassesForPackage(String packageName, boolean allowSubPackages, ClassLoader loader, boolean bailError) {
-		Set <URL> jarUrls = new HashSet <URL>();
-		Set <Path> directorys = new HashSet <Path>();
+	public static Set<Class<?>> tryGetClassesForPackage(String packageName, boolean allowSubPackages, ClassLoader loader, boolean bailError) {
+		Set<URI>  jarUrls    = new HashSet<>();
+		Set<Path> directorys = new HashSet<>();
 		findClassPools(loader, jarUrls, directorys, bailError, packageName);
-		Set <Class <?>> jarClasses = findJarClasses(allowSubPackages, packageName, jarUrls, directorys, loader, bailError);
-		Set <Class <?>> dirClasses = findDirClasses(allowSubPackages, packageName, directorys, loader, bailError);
+		Set<Class<?>> jarClasses = findJarClasses(allowSubPackages, packageName, jarUrls, directorys, loader, bailError);
+		Set<Class<?>> dirClasses = findDirClasses(allowSubPackages, packageName, directorys, loader, bailError);
 		jarClasses.addAll(dirClasses);
 		return jarClasses;
 	}
 	
-	private static Set <Class <?>> findDirClasses(boolean subPackages, String packageName, Set <Path> directorys, ClassLoader loader, boolean bailError) {
-		Filter <Path> filter;
-		Set <Class <?>> result = new HashSet <>();
+	private static Set<Class<?>> findDirClasses(boolean subPackages, String packageName, Set<Path> directorys, ClassLoader loader,
+			boolean bailError) {
+		Filter<Path>  filter;
+		Set<Class<?>> result = new HashSet<>();
 		for (Path startPath : directorys) {
-			String packagePath = packageName.replace(".", startPath.getFileSystem().getSeparator());
-			final Path searchPath = startPath.resolve(packagePath).toAbsolutePath();
+			String     packagePath = packageName.replace(".", startPath.getFileSystem().getSeparator());
+			final Path searchPath  = startPath.resolve(packagePath).toAbsolutePath();
 			if (subPackages) {
 				filter = p -> {
 					p = p.toAbsolutePath();
@@ -596,79 +711,72 @@ public class BigChecker implements Runnable, Supplier <BigCheckResult>, TriConsu
 					}
 				};
 			}
-			if (Files.exists(searchPath)) {
-				findDirClassFilesRecursive(filter, searchPath, startPath, result, loader, bailError);
-			} // the package does not have to exist in every directory
+			if (Files.exists(searchPath)) { findDirClassFilesRecursive(filter, searchPath, startPath, result, loader, bailError); } // the package
+																																	// does not have
+																																	// to exist in
+																																	// every directory
 		}
 		return result;
 	}
 	
-	private static void findDirClassFilesRecursive(Filter <Path> filter, Path path, Path start, Set <Class <?>> classes, ClassLoader loader, boolean bailError) {
-		try (DirectoryStream <Path> dirStream = Files.newDirectoryStream(path, filter)) {
+	private static void findDirClassFilesRecursive(Filter<Path> filter, Path path, Path start, Set<Class<?>> classes, ClassLoader loader,
+			boolean bailError) {
+		try (DirectoryStream<Path> dirStream = Files.newDirectoryStream(path, filter)) {
 			for (Path p : dirStream) {
 				if (Files.isDirectory(p)) {
 					findDirClassFilesRecursive(filter, p, start, classes, loader, bailError);
 				} else {
-					Path subp = p.subpath(start.getNameCount(), p.getNameCount());
-					String str = subp.toString();
+					Path   subp = p.subpath(start.getNameCount(), p.getNameCount());
+					String str  = subp.toString();
 					if (str.endsWith(".class")) {
 						str = str.substring(0, str.length() - 6);
 						String sep = p.getFileSystem().getSeparator();
-						if (str.startsWith(sep)) {
-							str = str.substring(sep.length());
-						}
-						if (str.endsWith(sep)) {
-							str = str.substring(0, str.length() - sep.length());
-						}
+						if (str.startsWith(sep)) { str = str.substring(sep.length()); }
+						if (str.endsWith(sep)) { str = str.substring(0, str.length() - sep.length()); }
 						String fullClassName = str.replace(sep, ".");
 						try {
-							Class <?> cls = Class.forName(fullClassName, false, loader);
+							Class<?> cls = Class.forName(fullClassName, false, loader);
 							classes.add(cls);
 						} catch (ClassNotFoundException e) {
-							if (bailError) {
-								throw new RuntimeException(e);
-							}
+							if (bailError) { throw new RuntimeException(e); }
 						}
 					}
 				}
 			}
 		} catch (IOException e) {
-			if (bailError) {
-				throw new RuntimeException(e);
-			}
+			if (bailError) { throw new RuntimeException(e); }
 		}
 	}
 	
-	private static Set <Class <?>> findJarClasses(boolean subPackages, String packageName, Set <URL> nextJarUrls, Set <Path> directories, ClassLoader loader, boolean bailError) {
-		String packagePath = packageName.replace('.', '/');
-		Set <Class <?>> result = new HashSet <>();
-		Set <URL> allJarUrls = new HashSet <>();
+	private static Set<Class<?>> findJarClasses(boolean subPackages, String packageName, Set<URI> nextJarUrls, Set<Path> directories,
+			ClassLoader loader, boolean bailError) {
+		String        packagePath = packageName.replace('.', '/');
+		Set<Class<?>> result      = new HashSet<>();
+		Set<URI>      allJarUrls  = new HashSet<>();
 		while (true) {
-			Set <URL> thisJarUrls = new HashSet <>(nextJarUrls);
+			Set<URI> thisJarUrls = new HashSet<>(nextJarUrls);
 			thisJarUrls.removeAll(allJarUrls);
-			if (thisJarUrls.isEmpty()) {
-				break;
-			}
+			if (thisJarUrls.isEmpty()) { break; }
 			allJarUrls.addAll(thisJarUrls);
-			for (URL url : thisJarUrls) {
-				try (JarInputStream stream = new JarInputStream(url.openStream())) {
+			for (URI url : thisJarUrls) {
+				try (JarInputStream stream = new JarInputStream(url.toURL().openStream())) {
 					// may want better way to open url connections
 					readJarClassPath(stream, nextJarUrls, directories, bailError);
 					JarEntry entry = stream.getNextJarEntry();
 					while (entry != null) {
 						String name = entry.getName();
-						int i = name.lastIndexOf("/");
+						int    i    = name.lastIndexOf("/");
 						
 						if (i > 0 && name.endsWith(".class")) {
 							try {
 								if (subPackages) {
 									if (name.substring(0, i).startsWith(packagePath)) {
-										Class <?> cls = Class.forName(name.substring(0, name.length() - 6).replace("/", "."), false, loader);
+										Class<?> cls = Class.forName(name.substring(0, name.length() - 6).replace("/", "."), false, loader);
 										result.add(cls);
 									}
 								} else {
 									if (name.substring(0, i).equals(packagePath)) {
-										Class <?> cls = Class.forName(name.substring(0, name.length() - 6).replace("/", "."), false, loader);
+										Class<?> cls = Class.forName(name.substring(0, name.length() - 6).replace("/", "."), false, loader);
 										result.add(cls);
 									}
 								}
@@ -687,25 +795,19 @@ public class BigChecker implements Runnable, Supplier <BigCheckResult>, TriConsu
 		return result;
 	}
 	
-	private static void readJarClassPath(JarInputStream stream, Set <URL> jarUrls, Set <Path> directories, boolean bailError) {
+	private static void readJarClassPath(JarInputStream stream, Set<URI> jarUrls, Set<Path> directories, boolean bailError) {
 		Manifest manifest = stream.getManifest();
-		if (manifest == null) {
-			return;
-		}
+		if (manifest == null) { return; }
 		Object classPathObj = manifest.getMainAttributes().get(new Name("Class-Path"));
-		if (classPathObj == null) {
-			return;
-		}
+		if (classPathObj == null) { return; }
 		if (classPathObj instanceof String) {
 			String[] entries = ((String) classPathObj).split("\\s+");// should also work with a single space (" ")
 			for (String entry : entries) {
 				try {
-					URL url = new URL(entry);
-					addFromUrl(jarUrls, directories, url, bailError);
-				} catch (MalformedURLException e) {
-					if (bailError) {
-						throw new RuntimeException(e);
-					}
+					URI url = new URL(entry).toURI();
+					addFromUrl(jarUrls, directories, url.toURL(), bailError);
+				} catch (URISyntaxException | MalformedURLException e) {
+					if (bailError) { throw new RuntimeException(e); }
 				}
 			}
 		} else if (bailError) {
@@ -713,7 +815,7 @@ public class BigChecker implements Runnable, Supplier <BigCheckResult>, TriConsu
 		}
 	}
 	
-	private static void findClassPools(ClassLoader classLoader, Set <URL> jarUrls, Set <Path> directoryPaths, boolean bailError, String packageName) {
+	private static void findClassPools(ClassLoader classLoader, Set<URI> jarUrls, Set<Path> directoryPaths, boolean bailError, String packageName) {
 		packageName = packageName.replace('.', '/');
 		while (classLoader != null) {
 			if (classLoader instanceof URLClassLoader) {
@@ -722,58 +824,53 @@ public class BigChecker implements Runnable, Supplier <BigCheckResult>, TriConsu
 				}
 			} else {
 				URL res = classLoader.getResource("");
-				if (res != null) {
-					addFromUrl(jarUrls, directoryPaths, res, bailError);
-				}
+				if (res != null) { addFromUrl(jarUrls, directoryPaths, res, bailError); }
 				res = classLoader.getResource("/");
-				if (res != null) {
-					addFromUrl(jarUrls, directoryPaths, res, bailError);
-				}
+				if (res != null) { addFromUrl(jarUrls, directoryPaths, res, bailError); }
 				res = classLoader.getResource("/" + packageName);
 				if (res != null) {
-					res = removePackageFromUrl(res, packageName, bailError);
-					if (res != null) {
-						addFromUrl(jarUrls, directoryPaths, res, bailError);
+					try {
+						res = removePackageFromUri(res.toURI(), packageName, bailError).toURL();
+						if (res != null) { addFromUrl(jarUrls, directoryPaths, res, bailError); }
+					} catch (MalformedURLException | URISyntaxException e) {
+						if (bailError) { throw new RuntimeException(e); }
 					}
 				}
 				res = classLoader.getResource(packageName);
 				if (res != null) {
-					res = removePackageFromUrl(res, packageName, bailError);
-					if (res != null) {
-						addFromUrl(jarUrls, directoryPaths, res, bailError);
+					try {
+						res = removePackageFromUri(res.toURI(), packageName, bailError).toURL();
+						if (res != null) { addFromUrl(jarUrls, directoryPaths, res, bailError); }
+					} catch (MalformedURLException | URISyntaxException e) {
+						if (bailError) { throw new RuntimeException(e); }
 					}
 				}
-				if (jarUrls.isEmpty() && directoryPaths.isEmpty()) {
-					addFromUnknownClass(classLoader, jarUrls, directoryPaths, bailError, 8);
-				}
+				if (jarUrls.isEmpty() && directoryPaths.isEmpty()) { addFromUnknownClass(classLoader, jarUrls, directoryPaths, bailError, 8); }
 			}
 			classLoader = classLoader.getParent();
 		}
 	}
 	
-	private static URL removePackageFromUrl(URL res, String packagePath, boolean bailError) {
+	private static URI removePackageFromUri(URI res, String packagePath, boolean bailError) {
 		packagePath = "/" + packagePath;
 		String urlStr = res.toString();
-		if ( !urlStr.endsWith(packagePath)) {
+		if (!urlStr.endsWith(packagePath)) {
 			packagePath += '/';
-			if ( !urlStr.endsWith(packagePath)) {
+			if (!urlStr.endsWith(packagePath)) {
 				if (bailError) {
-					throw new RuntimeException("the url string does not end with the packagepath! packagePath='" + packagePath + "' urlStr='" + urlStr + "'");
+					throw new RuntimeException(
+							"the url string does not end with the packagepath! packagePath='" + packagePath + "' urlStr='" + urlStr + "'");
 				} else {
 					return null;
 				}
 			}
 		}
 		urlStr = urlStr.substring(0, urlStr.length() - packagePath.length());
-		if (urlStr.endsWith("!")) {
-			urlStr = urlStr.substring(0, urlStr.length() - 1);
-		}
-		if (urlStr.startsWith("jar:")) {
-			urlStr = urlStr.substring(4);
-		}
+		if (urlStr.endsWith("!")) { urlStr = urlStr.substring(0, urlStr.length() - 1); }
+		if (urlStr.startsWith("jar:")) { urlStr = urlStr.substring(4); }
 		try {
-			return new URL(urlStr);
-		} catch (MalformedURLException e) {
+			return new URI(urlStr);
+		} catch (URISyntaxException e) {
 			if (bailError) {
 				throw new RuntimeException(e);
 			} else {
@@ -782,38 +879,30 @@ public class BigChecker implements Runnable, Supplier <BigCheckResult>, TriConsu
 		}
 	}
 	
-	private static void addFromUnknownClass(Object instance, Set <URL> jarUrls, Set <Path> directoryPaths, boolean bailError, int maxDeep) {
-		Class <?> cls = instance.getClass();
+	private static void addFromUnknownClass(Object instance, Set<URI> jarUrls, Set<Path> directoryPaths, boolean bailError, int maxDeep) {
+		Class<?> cls = instance.getClass();
 		while (cls != null) {
 			Field[] fields = cls.getDeclaredFields();
 			for (Field field : fields) {
-				Class <?> type = field.getType();
-				Object value;
+				Class<?> type = field.getType();
+				Object   value;
 				try {
 					value = Checker.getValue(field, instance);
-					if (value != null) {
-						addFromUnknownValue(value, jarUrls, directoryPaths, bailError, type, field.getName(), maxDeep - 1);
-					}
+					if (value != null) { addFromUnknownValue(value, jarUrls, directoryPaths, bailError, type, field.getName(), maxDeep - 1); }
 				} catch (IllegalArgumentException | IllegalAccessException | SecurityException e) {
 					if (bailError) {
 						final String version = System.getProperty("java.version");
-						String vers = version;
-						if (vers.startsWith("1.")) {
-							vers = vers.substring(2);
-						}
+						String       vers    = version;
+						if (vers.startsWith("1.")) { vers = vers.substring(2); }
 						int dotindex = vers.indexOf('.');
-						if (dotindex != -1) {
-							vers = vers.substring(0, dotindex);
-						}
+						if (dotindex != -1) { vers = vers.substring(0, dotindex); }
 						int versNum;
 						try {
 							versNum = Integer.parseInt(vers);
 						} catch (NumberFormatException e1) {
 							throw new RuntimeException("illegal version: '" + version + "' lastError: " + e.getMessage(), e);
 						}
-						if (versNum <= 11) {
-							throw new RuntimeException(e);
-						}
+						if (versNum <= 11) { throw new RuntimeException(e); }
 					}
 				}
 			}
@@ -822,39 +911,42 @@ public class BigChecker implements Runnable, Supplier <BigCheckResult>, TriConsu
 		
 	}
 	
-	private static void addFromUnknownValue(Object value, Set <URL> jarUrls, Set <Path> directoryPaths, boolean bailError, Class <?> type, String fieldName, int maxDeep) {
+	private static void addFromUnknownValue(Object value, Set<URI> jarUrls, Set<Path> directoryPaths, boolean bailError, Class<?> type,
+			String fieldName, int maxDeep) {
 		if (Collection.class.isAssignableFrom(type)) {
-			for (Object obj : (Collection <?>) value) {
-				URL url = null;
+			for (Object obj : (Collection<?>) value) {
+				URI uri = null;
 				try {
-					if (obj instanceof URL) {
-						url = (URL) obj;
-					} else if (obj instanceof Path) {
-						url = ((Path) obj).toUri().toURL();
-					} else if (obj instanceof File) {
-						url = ((File) obj).toURI().toURL();
-					}
-				} catch (MalformedURLException e) {
-					if (bailError) {
-						throw new RuntimeException(e);
-					}
-				}
-				if (url != null) {
-					addFromUrl(jarUrls, directoryPaths, url, bailError);
+					if (obj instanceof URI no) {
+						uri = no;
+					} else if (obj instanceof URL no) {
+						uri = no.toURI();
+					} else if (obj instanceof Path no) {
+						uri = no.toUri();
+					} else if (obj instanceof File no) { uri = no.toURI(); }
+					if (uri != null) { addFromUrl(jarUrls, directoryPaths, uri.toURL(), bailError); }
+				} catch (URISyntaxException | MalformedURLException e) {
+					if (bailError) { throw new RuntimeException(e); }
 				}
 			}
 		} else if (URL[].class.isAssignableFrom(type)) {
 			for (URL url : (URL[]) value) {
 				addFromUrl(jarUrls, directoryPaths, url, bailError);
 			}
+		} else if (URI[].class.isAssignableFrom(type)) {
+			for (URI uri : (URI[]) value) {
+				try {
+					addFromUrl(jarUrls, directoryPaths, uri.toURL(), bailError);
+				} catch (MalformedURLException e) {
+					if (bailError) { throw new RuntimeException(e); }
+				}
+			}
 		} else if (Path[].class.isAssignableFrom(type)) {
 			for (Path path : (Path[]) value) {
 				try {
 					addFromUrl(jarUrls, directoryPaths, path.toUri().toURL(), bailError);
 				} catch (MalformedURLException e) {
-					if (bailError) {
-						throw new RuntimeException(e);
-					}
+					if (bailError) { throw new RuntimeException(e); }
 				}
 			}
 		} else if (File[].class.isAssignableFrom(type)) {
@@ -862,33 +954,25 @@ public class BigChecker implements Runnable, Supplier <BigCheckResult>, TriConsu
 				try {
 					addFromUrl(jarUrls, directoryPaths, file.toURI().toURL(), bailError);
 				} catch (MalformedURLException e) {
-					if (bailError) {
-						throw new RuntimeException(e);
-					}
+					if (bailError) { throw new RuntimeException(e); }
 				}
 			}
-		} else if (maxDeep > 0) {
-			addFromUnknownClass(value, jarUrls, directoryPaths, bailError, maxDeep - 1);
-		}
+		} else if (maxDeep > 0) { addFromUnknownClass(value, jarUrls, directoryPaths, bailError, maxDeep - 1); }
 	}
 	
-	private static void addFromUrl(Set <URL> jarUrls, Set <Path> directoryPaths, URL url, boolean bailError) {
-		if (url.getFile().endsWith(".jar") || url.getFile().endsWith(".zip")) {
-			// may want better way to detect jar files
-			jarUrls.add(url);
-		} else {
-			try {
+	private static void addFromUrl(Set<URI> jarUrls, Set<Path> directoryPaths, URL url, boolean bailError) {
+		try {
+			if (url.getFile().endsWith(".jar") || url.getFile().endsWith(".zip")) {
+				// may want better way to detect jar files
+				jarUrls.add(url.toURI());
+			} else {
 				Path path = Paths.get(url.toURI());
 				if (Files.isDirectory(path)) {
 					directoryPaths.add(path);
-				} else if (bailError) {
-					throw new RuntimeException("unknown url for class loading: " + url);
-				}
-			} catch (URISyntaxException e) {
-				if (bailError) {
-					throw new RuntimeException(e);
-				}
+				} else if (bailError) { throw new RuntimeException("unknown url for class loading: " + url); }
 			}
+		} catch (URISyntaxException e) {
+			if (bailError) { throw new RuntimeException(e); }
 		}
 	}
 	
